k8s/birdboard-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdboard-deployment
spec:
  selector:
    matchLabels:
      component: birdboard
  template:
    metadata:
      labels:
        component: birdboard
    spec:
      containers:
      - name: birdboard-deployment
        image: vkingmaker/birdboard
        ports:
        - containerPort: 80
