k8s/birdboard-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birdboard-cluster-ip-service
spec:
  selector:
    component: birdboard
  ports:
  - port: 80
    targetPort: 80
