k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - bird-board.tk
        - www.bird-board.tk
      secretName: bird-board-tk-tls
  rules:
    - host: bird-board.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: birdboard-cluster-ip-service
              servicePort: 80

    - host: www.bird-board.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: birdboard-cluster-ip-service
              servicePort: 80
